--- a/.travis.yml
+++ b/.travis.yml
@@ -1,30 +1,72 @@
 language: bash
+
 services: docker
+
+
 
 env:
   - VERSION=1.8 VARIANT=
+  - VERSION=1.8 VARIANT=xenial
   - VERSION=1.8 VARIANT=stretch
   - VERSION=1.8 VARIANT=alpine
   - VERSION=1.7 VARIANT=
+  - VERSION=1.7 VARIANT=xenial
   - VERSION=1.7 VARIANT=wheezy
   - VERSION=1.7 VARIANT=alpine
   - VERSION=1.7 VARIANT=alpine3.5
 
+  - VERSION=1.8 VARIANT=
+
+  - VERSION=1.8 VARIANT=xenial
+
+  - VERSION=1.8 VARIANT=stretch
+
+  - VERSION=1.8 VARIANT=alpine
+
+  - VERSION=1.7 VARIANT=
+
+  - VERSION=1.7 VARIANT=xenial
+
+  - VERSION=1.7 VARIANT=wheezy
+
+  - VERSION=1.7 VARIANT=alpine
+
+  - VERSION=1.7 VARIANT=alpine3.5
+
+
+
 install:
+
   - git clone https://github.com/docker-library/official-images.git ~/official-images
 
+
+
 before_script:
+
   - env | sort
+
   - cd "$VERSION"
+
   - image="$(awk '$1 == "FROM" { print $2; exit }' onbuild/Dockerfile)${VARIANT:+-$VARIANT}"
 
+
+
 script:
+
   - travis_retry docker build -t "$image" "${VARIANT:-.}"
+
   - ~/official-images/test/run.sh "$image"
+
 # the "onbuild" variant has to happen with the base variant because it's FROM it
+
   - true && [ "$VARIANT" ] || travis_retry docker build -t "${image}-onbuild" onbuild
 
+
+
 after_script:
+
   - docker images
+
+
 
 # vim:set et ts=2 sw=2:
